--- a/www.resounding.ca/Web.config
+++ b/www.resounding.ca/Web.config
@@ -1,11 +1,18 @@
-﻿<?xml version="1.0"?>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  </configSections>
   <appSettings />
-    
+  <connectionStrings>
+    <add name="AdventureWorksContext"
+          providerName="System.Data.SqlClient"
+          connectionString="Server=.\SQLEXPRESS; Database=AdventureWorksLT2008R2; Trusted_Connection=true" />
+  </connectionStrings>
   <system.web>
     <customErrors mode="Off">
-      <error statusCode="404" redirect="/Content/404.html"/>
+      <error statusCode="404" redirect="/Content/404.html" />
     </customErrors>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
@@ -16,7 +23,6 @@
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -24,16 +30,14 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages"/>
+        <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
   </system.web>
-
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -42,4 +46,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="Data Source=.\SQLEXPRESS; Integrated Security=True; MultipleActiveResultSets=True" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
 </configuration>
