UI tweaks & cleanup - use a glyph

--- a/www.resounding.ca/www.resounding.ca.csproj
+++ b/www.resounding.ca/www.resounding.ca.csproj
@@ -51,18 +51,13 @@
     <Content Include="Content\css\bootstrap.min.css" />
     <Content Include="Content\img\box.png" />
     <Content Include="Content\img\elements.png" />
-    <Content Include="Content\img\gears-hover.png" />
-    <Content Include="Content\img\gears.png" />
     <Content Include="Content\img\glyphicons-halflings-white.png" />
     <Content Include="Content\img\glyphicons-halflings.png" />
+    <Content Include="Content\img\links.png" />
     <Content Include="Content\img\meeting.png" />
     <Content Include="Content\img\data.png" />
     <Content Include="Content\img\integration.png" />
     <Content Include="Content\img\email.png" />
-    <Content Include="Content\img\racecar-hover.png" />
-    <Content Include="Content\img\racecar.png" />
-    <Content Include="Content\img\smartphone-hover.png" />
-    <Content Include="Content\img\smartphone.png" />
     <Content Include="Content\js\bootstrap-modal.js" />
     <Content Include="Content\js\bootstrap.js" />
     <Content Include="Content\js\bootstrap.min.js" />
