--- a/www.resounding.ca/www.resounding.ca.csproj
+++ b/www.resounding.ca/www.resounding.ca.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -15,6 +16,15 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>4.0</OldToolsVersion>
+    <IISExpressSSLPort />
+    <IISExpressAnonymousAuthentication />
+    <IISExpressWindowsAuthentication />
+    <IISExpressUseClassicPipelineMode />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -71,32 +81,47 @@
     <Content Include="Content\img\integration.png" />
     <Content Include="Content\img\email.png" />
     <Content Include="Content\js\backbone.js" />
+    <Content Include="Content\js\backbone.marionette.js" />
     <Content Include="Content\js\bootstrap-modal.js" />
     <Content Include="Content\js\bootstrap.js" />
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\css\resounding.css" />
-    <Content Include="Content\js\chaplin.js" />
     <Content Include="Content\js\domReady.js" />
-    <Content Include="Content\js\handlebars.js" />
     <Content Include="Content\js\jquery.js" />
     <Content Include="Content\js\require.js" />
-    <Content Include="Content\js\Teams\controllers\teams_controller.coffee" />
-    <Content Include="Content\js\Teams\controllers\teams_controller.js" />
+    <Content Include="Content\js\Teams\models\player.js">
+      <DependentUpon>player.coffee</DependentUpon>
+    </Content>
+    <Content Include="Content\js\Teams\models\players.js">
+      <DependentUpon>players.coffee</DependentUpon>
+    </Content>
     <Content Include="Content\js\Teams\models\team.coffee" />
-    <Content Include="Content\js\Teams\models\team.js" />
+    <Content Include="Content\js\Teams\models\team.js">
+      <DependentUpon>team.coffee</DependentUpon>
+    </Content>
     <Content Include="Content\js\Teams\models\teams.coffee" />
-    <Content Include="Content\js\Teams\models\teams.js" />
-    <Content Include="Content\js\Teams\routes.coffee" />
-    <Content Include="Content\js\Teams\routes.js" />
+    <Content Include="Content\js\Teams\models\teams.js">
+      <DependentUpon>teams.coffee</DependentUpon>
+    </Content>
     <Content Include="Content\js\Teams\templates\teamViews.html" />
     <Content Include="Content\js\Teams\tournament_application.coffee" />
-    <Content Include="Content\js\Teams\tournament_application.js" />
-    <Content Include="Content\js\Teams\views\layout.coffee" />
-    <Content Include="Content\js\Teams\views\layout.js" />
+    <Content Include="Content\js\Teams\tournament_application.js">
+      <DependentUpon>tournament_application.coffee</DependentUpon>
+    </Content>
+    <Content Include="Content\js\Teams\views\players_list.js">
+      <DependentUpon>players_list.coffee</DependentUpon>
+    </Content>
+    <Content Include="Content\js\Teams\views\player_detail.js">
+      <DependentUpon>player_detail.coffee</DependentUpon>
+    </Content>
     <Content Include="Content\js\Teams\views\teams_list.coffee" />
-    <Content Include="Content\js\Teams\views\teams_list.js" />
+    <Content Include="Content\js\Teams\views\teams_list.js">
+      <DependentUpon>teams_list.coffee</DependentUpon>
+    </Content>
     <Content Include="Content\js\Teams\views\team_detail.coffee" />
-    <Content Include="Content\js\Teams\views\team_detail.js" />
+    <Content Include="Content\js\Teams\views\team_detail.js">
+      <DependentUpon>team_detail.coffee</DependentUpon>
+    </Content>
     <Content Include="Content\js\text.js" />
     <Content Include="Content\js\underscore.js" />
     <Content Include="Content\style.css" />
@@ -140,8 +165,9 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.4.3.1\lib\net40\EntityFramework.dll</HintPath>
+    <Reference Include="EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net40\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp">
       <Private>True</Private>
@@ -231,13 +257,30 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Tournaments\Views\Shared\" />
-    <Folder Include="Content\js\Teams\views\base\" />
+    <Folder Include="Content\js\Teams\controllers\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Tournaments\Views\Tournaments\Teams.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\js\Teams\models\player.coffee" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\js\Teams\models\players.coffee" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\js\Teams\views\players_list.coffee" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\js\Teams\views\player_detail.coffee" />
+  </ItemGroup>
+  <PropertyGroup>
+    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
+    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
+  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
