--- a/www.resounding.ca/Web.Debug.config
+++ b/www.resounding.ca/Web.Debug.config
@@ -8,6 +8,9 @@
       <add name="AdventureWorksContext" 
         connectionString="Data Source=(local); Integrated Security=False; User=TourneyUser; Password=resounding; Initial Catalog=AdventureWorksLT2008R2" 
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+      <add name="TournamentsContext"
+        connectionString="Data Source=(local); Integrated Security=False; User=TourneyUser; Password=resounding; Initial Catalog=Tournaments"
+        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
 
   <system.web>
