--- a/www.resounding.ca/Web.Release.config
+++ b/www.resounding.ca/Web.Release.config
@@ -3,17 +3,15 @@
 <!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of 
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an atrribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
+  <connectionStrings>
+    <add name="AdventureWorksContext"
+      connectionString="Data Source=(local); Integrated Security=False; User=TourneyUser; Password=resounding; Initial Catalog=AdventureWorksLT2008R2"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    <add name="TournamentsContext"
+      connectionString="Data Source=(local); Integrated Security=False; User=TourneyUser; Password=resounding; Initial Catalog=Tournaments"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <customErrors mode="Off" xdt:Transform="Replace">
