--- a/www.resounding.ca/Web.config
+++ b/www.resounding.ca/Web.config
@@ -10,8 +10,8 @@
     <add key="PreserveLoginUrl" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="AdventureWorksContext" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS; Database=AdventureWorksLT2008R2; Trusted_Connection=true" />
-    <add name="TournamentsContext" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS; Database=Tournaments; Trusted_Connection=true" />
+    <add name="AdventureWorksContext" providerName="System.Data.SqlClient" connectionString="(LocalDB)\v11.0; Integrated Security=true; AttachDbFileName=C:\Projects\www.resounding.ca\www.resounding.ca\App_Data\AdventureWorks.sdf" />
+    <add name="TournamentsContext" providerName="System.Data.SqlClient" connectionString="Server=(LocalDB)\v11.0; Integrated Security=true; AttachDbFileName=C:\Projects\www.resounding.ca\www.resounding.ca\App_Data\Tournaments.sdf" />
   </connectionStrings>
   <system.web>
     <customErrors mode="Off">
