--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "www.resounding.ca",
-  "version": "0.0.1-9",
+  "version": "0.0.2",
   "description": "ERROR: No README.md file found!",
   "main": "index.js",
   "scripts": {
