--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "www.resounding.ca",
-  "version": "0.0.2",
-  "description": "ERROR: No README.md file found!",
+  "version": "0.0.2-1",
+  "description": "The resounding.ca website",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
