--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "www.resounding.ca",
-  "version": "0.0.3-2",
+  "version": "0.0.4",
   "description": "The resounding.ca website",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
