--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "author": "Cliffe Hodgkinson",
   "license": "BSD",
   "dependencies": {
-    "express": "3.2.0",
-    "nodemailer": "0.4.1"
+    "express": "3.2.0"
   },
   "subdomain": "resounding",
   "domains": [
@@ -23,8 +22,5 @@
     "www.resounding.ca",
     "apps.resounding.ca",
     "work.resounding.ca"
-  ],
-  "engines": {
-    "node": "0.10.x"
-  }
+  ]
 }
