--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Cliffe Hodgkinson",
   "license": "BSD",
   "dependencies": {
-    "express": "3.2.0"
+    "express": "~4.0.0"
   },
   "subdomain": "resounding",
   "domains": [
