--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Cliffe Hodgkinson",
   "license": "BSD",
   "dependencies": {
-    "express": "~4.0.0"
+    "express": "~4.0.0",
+    "compression": "1.x"
   },
   "subdomain": "resounding",
   "domains": [
